syntax = "proto3";

package coinbase.staking.v1alpha1;

option go_package = "github.com/coinbase/staking-client-library-go/gen/go/coinbase/staking/v1alpha1";

import "google/api/field_behavior.proto";
import "google/api/resource.proto";

// A Network resource, which represents a blockchain network.
// (i.e. mainnet, testnet, etc.)
message Network {
  option (google.api.resource) = {
    type: "staking.coinbase.com/Network"
    pattern: "protocols/{protocol}/networks/{network}"
    singular: "network"
    plural: "networks"
  };

  // The resource name of the Network.
  // Format: protocols/{protocolName}/networks/{networkName}
  // Ex: protocols/polygon/networks/goerli
  string name = 1;


  // Represents if the network is the mainnet network
  // for the given protocol.
  bool is_mainnet = 2;
}

// The request message for ListNetworks.
message ListNetworksRequest {
  // The resource name of the parent that owns
  // the collection of networks.
  // Format: protocols/{protocol}
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      child_type: "staking.coinbase.com/Network"
    }];
}

// The response message for ListNetworks.
message ListNetworksResponse {
  // The list of networks.
  repeated Network networks = 1;
}
